# MaplePainless-DC

./: Dockerfile  LICENSE  README  doxygen.config  run.sh
glucose/: Makefile
glucose/core/: SolverTypes.h
glucose/simp/: SimpSolver.cc
glucose/utils/: Options.cc
lingeling/: lglib.c
mapleCOMSPS/m4ri-20140914/: configure
mapleCOMSPS/mapleCOMSPS/core/: Main.cc  Solver.cc  SolverTypes.h  classifier.h
mapleCOMSPS/mapleCOMSPS/mtl/: Map.h  Queue.h  Sort.h  Vec.h
mapleCOMSPS/mapleCOMSPS/simp/: SimpSolver.h
mapleCOMSPS/mapleCOMSPS/utils/: Options.cc  Options.h  System.cc  System.h
maplesat/: Makefile
maplesat/maplesat/mtl/: Alg.h  Vec.h
minisat/: Makefile
minisat/minisat/core/: Solver.h  SolverTypes.h
painless/: Makefile
painless-src/clauses/: ClauseDatabase.cpp  ClauseManager.h
painless-src/community/: Community.cpp  Community.h  GraphAlgorithms.cpp
painless-src/sharing/: HordeSatSharing.h  Sharer.cpp  SimpleSharing.h
painless-src/solvers/: Lingeling.cpp  Lingeling.h  Maple.cpp  Maple.h  SolverFactory.cpp
painless-src/utils/: Logger.cpp  Logger.h  Parameters.h
painless-src/working/: CubeAndConquer.cpp  CubeAndConquer.h  DivideAndConquer.cpp  Portfolio.cpp  WorkingQueue.h
painless/glucose/core/: Solver.cc  Solver.h
painless/glucose/parallel/: ParallelSolver.cc  ParallelSolver.h
painless/glucose/utils/: ParseUtils.h
painless/lingeling/: lglib.h
painless/mapleCOMSPS/: CMakeLists.txt  Makefile
painless/mapleCOMSPS/mapleCOMSPS/core/: Dimacs.h  Solver.h  classifier.cc
painless/mapleCOMSPS/mapleCOMSPS/mtl/: Alg.h  Alloc.h  Heap.h
painless/mapleCOMSPS/mapleCOMSPS/simp/: Main.cc  SimpSolver.cc
painless/maplesat/maplesat/core/: Dimacs.h  Main.cc  Solver.cc  Solver.h  SolverTypes.h
painless/maplesat/maplesat/mtl/: Alloc.h  Heap.h  IntTypes.h  Map.h  Queue.h  Sort.h  XAlloc.h
painless/maplesat/maplesat/simp/: Main.cc  SimpSolver.cc  SimpSolver.h
painless/maplesat/maplesat/utils/: Options.cc  Options.h  ParseUtils.h  System.cc  System.h
painless/minisat/minisat/core/: Solver.cc
painless/minisat/minisat/simp/: SimpSolver.cc
painless/painless-src/: Makefile  painless.cpp  painless.h
painless/painless-src/clauses/: ClauseBuffer.cpp  ClauseBuffer.h  ClauseDatabase.h  ClauseFilter.cpp  ClauseFilter.h
painless/painless-src/community/: Graph.cpp  Graph.h  GraphAlgorithms.h
painless/painless-src/sharing/: HordeSatSharing.cpp  Sharer.h  SharingStrategy.h  SimpleSharing.cpp
painless/painless-src/solvers/: GlucoseSyrup.cpp  GlucoseSyrup.h  Maplesat.cpp  Maplesat.h  MiniSat.cpp  MiniSat.h  SolverFactory.h  SolverInterface.h
painless/painless-src/utils/: DebugUtils.h  SatUtils.cpp  SatUtils.h  System.cpp  System.h
painless/painless-src/working/: DivideAndConquer.h  Portfolio.h  SequentialWorker.cpp  SequentialWorker.h  SimpleWorkingQueue.cpp  SimpleWorkingQueue.h  WorkingStrategy.h
